--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
       <article class="letter">
         <h1>Happy 2nd Year Anniversary, my super forever always and only one Baby Bea!!!</h1>
         <p>
-          Hi my baby!!!
           <br>
+          Hi my baby!!!
+          <br><br>
           Thank you po so much for being with me and loving me for these past two years.
           I'm so so so super grateful po to have you in my life.
           You've always been there po for me during my darkest days, and you've always supported me po in everything I do.
@@ -41,22 +42,31 @@
           You never once po complained about my situation, and it's something na I realized quite late po.
           I super regret na I kinda took that for granted before, but now po I really really appreciate and value you so much more.
           During our ups and downs in these two years po, you were always there po by my side, like, no matter what.
-          I can't even imagine po my life without you in it.
-          I super love you po so much and I promise po to always be there for you too, no matter what happens po!
-          I will continue improving po myself so that I can be the best partner po for you.
+          I can't even imagine po my life without you in it. You are so so so so important po to me po and I hope you know that always po hehe.
+          I super love you po so much and I promise po to always be there for you too, no matter what happens!!!
+          <br><br>
+          I will continue improving po din myself so that I can be the best partner po for you.
           I'm really sorry po sometimes for putting my ego first before our relationship,
           but I promise po to always work on that and be more understanding po towards you.
+          We will be a super amazing couple po (we already are!) where we will always love and support each other
+          and we will continue to grow po together and be the best versions of ourselves!!!
           You are my everything po, my reason for living, and I will always cherish and love you po with all my heart.
           Without you, I will still be stuck in that job that I hated,
           and I wouldn't have any reason to continue living other than to survive.
           But now po, because of you, I have a purpose po in life, and I want to live po to make you happy and proud of me and our super amazing relationship!
-          I love you po so so so so so muchie super mega forever ultimate always everlastingly endlessly eternally only one promise ONLY ONE PROMISE ONLY ONE PROMISE!!! A1 A1 A1 DRIVING SCHOOL!!!
+          From the SJ1 era, then the Navitaire era, then now the Emerson era, we've been through so much but we're still standing strong po together,
+          and we will continue po to do so no matter what challenges life throws at us, because we're just that amazing together!!
+          <br><br>
+          Thank you po for the super super super amazing 2 years and I can't wait for 1 bebijillion more years to come with you!!!
+          The two of us together against the world!!!
+          I love you po so so so so so muchie super mega forever ultimate always everlastingly endlessly eternally only one promise ONLY ONE PROMISE ONLY ONE PROMISE!!! <a href="https://www.youtube.com/watch?v=Ap9SbbGkncg">A1 A1 A1 DRIVING SCHOOL</a>!!!
           I can't wait for our future po together, my baby Bea.
           I know po that there will be more challenges and obstacles along the way,
           but I know po na, because of how amazing we are, we can overcome anything po together!
           I love you po so muchie smfuaeeeeeeeesoooopooopoopoooppppppppp!!!!!!!!!!!!!!!!!!!
-          Happy 2nd year anniversary my baby!!! More years po to come na super excited na ako po sa future natin po together!!!
+          Happy 2nd year anniversary my baby and SUPER FUTURE WIFE!!!!!!!! More years and decades and centuries pa po to come and I'm super excited na po ako sa future natin together!!!
         </p>
+        <img src="Bea2.jpg">
         <p>
           - Yours forever and always, super and only one promise, <br>
           <span class="sig">Your Bebi Babypoppa Joshua</span>
