--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           Without you, I will still be stuck in that job that I hated,
           and I wouldn't have any reason to continue living other than to survive.
           But now po, because of you, I have a purpose po in life, and I want to live po to make you happy and proud of me and our super amazing relationship!
-          From the SJ1 era, then the Navitaire era, then now the Emerson era, we've been through so much but we're still standing strong po together,
+          From the day we met sa UPLB, then the entire SJ1 era, then the Navitaire era, then now the Emerson era, we've been through so much but we're still standing strong po together,
           and we will continue po to do so no matter what challenges life throws at us, because we're just that amazing together!!
           <br><br>
           Thank you po for the super super super amazing 2 years and I can't wait for 1 bebijillion more years to come with you!!!
