--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     </noscript>
   </div>
 
+  <!--pwet hehe-->
+
   <main id="content" class="hidden">
     <audio id="song" src="Rico.mp3" preload="auto" loop></audio>
 
@@ -29,28 +31,41 @@
           <br>
           Hi my baby!!!
           <br><br>
-          Thank you po so much for being with me and loving me for these past two years.
-          I'm so so so super grateful po to have you in my life.
-          You've always been there po for me during my darkest days, and you've always supported me po in everything I do.
-          I can't even describe po in words how much I appreciate and love you po.
-          When you first met me po two years ago, I had extreme depression that I had to take meds.
-          And then you came along and instantly you made me feel so special and loved.
-          You gave me purpose po in my life, and you made me want to be a better person po for you,
+          Thank you po so much for being with me and loving me po for these past two years.
+          I'm so so so super grateful to have you in my life.
+          You've always been there po for me during my darkest days, and you've always supported me in everything I do.
+          I can't even describe in words how much I appreciate and love you po.
+          When you first met me po two years ago, I had extreme depression that I had to take meds,
+          and then you came along and instantly you made me feel so special and loved.
+          You gave me purpose po in my life, and you made me want to be a better person for you,
           and I will continue trying to improve and be a better person po because you only deserve the best!
           Then, even during the era po when i was extremely financially struggling, you were still there for me,
           willing to do anything po for me just to make me happy.
-          You never once po complained about my situation, and it's something na I realized quite late po.
+          You never once po complained about my situation, and it's something na I realized quite late.
           I super regret na I kinda took that for granted before, but now po I really really appreciate and value you so much more.
-          During our ups and downs in these two years po, you were always there po by my side, like, no matter what.
-          I can't even imagine po my life without you in it. You are so so so so important po to me po and I hope you know that always po hehe.
-          I super love you po so much and I promise po to always be there for you too, no matter what happens!!!
+          During our ups and downs in these two years, you were always there po by my side, like, no matter what.
+          I can't even imagine po my life without you in it. You are so so so so important po to me and I hope you know that always hehe.
+          I super love you po so much and I promise to always be there for you too, no matter what happens!!!
           <br><br>
-          I will continue improving po din myself so that I can be the best partner po for you.
+          And I'm super super proud din po of you my super baby!
+          In these past 2 years, I've seen you grow po so much as a person.
+          From doing super amazingly well po in your thesis, and then now having your very first job in GTA San Andreas,
+          you've really shown po how strong and capable you truly are.
+          I'm really so proud po of how super smart and hardworking you are, and you should never underestimate po yourself ever again,
+          because you are truly amazing po in so many ways.
+          You've been juggling me, your parents, your school responsibilities, and your personal goals po so well,
+          and I know po that it's not easy at all, but you always manage to do them all super amazingly,
+          and I'm super super proud po of you for that!!!
+          You truly are way more capable than you think po, my baby!
+          You're already the greatest and bestest person po in my life and I know that you have so much more potential pa to be even greater!
+          Just continue believing in yourself lang po and I'll always be here to support and love you no matter what!
+          <br><br>
+          I will continue improving po din myself so that I can be the best partner for you.
           I'm really sorry po sometimes for putting my ego first before our relationship,
-          but I promise po to always work on that and be more understanding po towards you.
+          but I promise to always work on that and be more understanding po towards you.
           We will be a super amazing couple po (we already are!) where we will always love and support each other
           and we will continue to grow po together and be the best versions of ourselves!!!
-          You are my everything po, my reason for living, and I will always cherish and love you po with all my heart.
+          You are my everything, my reason for living, and I will always cherish and love you po with all my heart.
           Without you, I will still be stuck in that job that I hated,
           and I wouldn't have any reason to continue living other than to survive.
           But now po, because of you, I have a purpose po in life, and I want to live po to make you happy and proud of me and our super amazing relationship!
@@ -61,8 +76,8 @@
           The two of us together against the world!!!
           I love you po so so so so so muchie super mega forever ultimate always everlastingly endlessly eternally only one promise ONLY ONE PROMISE ONLY ONE PROMISE!!! <a href="https://www.youtube.com/watch?v=Ap9SbbGkncg">A1 A1 A1 DRIVING SCHOOL</a>!!!
           I can't wait for our future po together, my baby Bea.
-          I know po that there will be more challenges and obstacles along the way,
-          but I know po na, because of how amazing we are, we can overcome anything po together!
+          I know that there will be more challenges and obstacles along the way,
+          but I know po na, because of how amazing we are, we can overcome anything together!
           I love you po so muchie smfuaeeeeeeeesoooopooopoopoooppppppppp!!!!!!!!!!!!!!!!!!!
           Happy 2nd year anniversary my baby and SUPER FUTURE WIFE!!!!!!!! More years and decades and centuries pa po to come and I'm super excited na po ako sa future natin together!!!
         </p>
