--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
           and we will continue to grow po together and be the best versions of ourselves!!!
           You are my everything, my reason for living, and I will always cherish and love you po with all my heart.
           Without you, I will still be stuck in that job that I hated,
-          and I wouldn't have any reason to continue living other than to survive.
-          But now po, because of you, I have a purpose po in life, and I want to live po to make you happy and proud of me and our super amazing relationship!
+          and I didn't think I would have any reason to continue living other than to survive.
+          But now po, because of you, I have an actual purpose na in life, and I want to live po to make you happy and proud of me and our super amazing relationship!
+          I'm so so so lucky to have met you and I'm super happy na you chose me po, even after everything.
           From the day we met sa UPLB, then the entire SJ1 Ubisoft era, then the Navitaire era, then now the Emerson era, we've been through so much but we're still standing strong po together,
           and we will continue po to do so no matter what challenges life throws at us, because we're just that amazing together!!
           <br><br>
