--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
           But now po, because of you, I have an actual purpose na in life, and I want to live po to make you happy and proud of me and our super amazing relationship!
           I'm so so so lucky to have met you and I'm super happy na you chose me po, even after everything.
           From the day we met sa UPLB, then the entire SJ1 Ubisoft era, then the Navitaire era, then now the Emerson era, we've been through so much but we're still standing strong po together,
-          and we will continue po to do so no matter what challenges life throws at us, because we're just that amazing together!!
+          and we will continue po to do so no matter what challenges life throws at us, because we're just that amazing together, and especially you!!!
+          You can thank the stars po all you want, but I'll always be the lucky one.
           <br><br>
           Thank you po for the super super super amazing 2 years and I can't wait for 1 bebijillion more years to come with you!!!
           The two of us together against the world!!!
